apps/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-gateway
spec:
  selector:
    matchLabels:
      app: app-gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: app-gateway
    spec:
      terminationGracePeriodSeconds: 10
      restartPolicy: Always
      containers:
        - name: app-gateway
          image: onthertech/tokamak.gateway
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: app-gateway-volume
              readOnly: true
              mountPath: /usr/share/caddy/config
      volumes:
        - name: app-gateway-volume
          configMap:
            name: app-gateway-config
