apps/gateway/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-gateway-svc
spec:
  selector:
    app: app-gateway
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
