apps/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway
spec:
  ingressClassName: nginx
  rules:
  - host: gateway.local.tokamak.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-gateway-svc
            port:
              number: 80
